added liquibase migration and the ability to save taskList

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,9 +17,11 @@ spring.security.oauth2.client.provider.facebook.userInfoUri=https://graph.facebo
 
 spring.h2.console.enabled=true
 
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=none
 spring.datasource.url=jdbc:mysql://localhost:3306/todo?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=D#sk8mNIX7*
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=true
+
+spring.liquibase.change-log=classpath:/database/liquibase-changeLog.xml
