added ability to delete taskList

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,4 +24,5 @@ spring.datasource.password=D#sk8mNIX7*
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=true
 
+spring.mvc.hiddenmethod.filter.enabled=true
 spring.liquibase.change-log=classpath:/database/liquibase-changeLog.xml
