--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,28 +1,26 @@
-
-spring.security.oauth2.client.registration.google.client-id=816171286025-0hrhmdhjgbe1iravte9bme3mmuhv4b2b.apps.googleusercontent.com
-spring.security.oauth2.client.registration.google.client-secret=CFX_sf1UXUGGVYg6qW3bVJ3e
+server.port=5000
+spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
+spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECRET}
 spring.security.oauth2.client.registration.google.scope=email,profile
 
-spring.security.oauth2.client.registration.github.client-id=27750257c80d5857c3a9
-spring.security.oauth2.client.registration.github.client-secret=b2c38a4bb466216027c9601fae96e9731f36ef12
+spring.security.oauth2.client.registration.github.client-id=${GITHUB_CLIENT_ID}
+spring.security.oauth2.client.registration.github.client-secret=${GITHUB_CLIENT_SECRET}
 spring.security.oauth2.client.registration.github.scope=read:user,user:email
 
 
-spring.security.oauth2.client.registration.facebook.client-id=414272186414011
-spring.security.oauth2.client.registration.facebook.client-secret=bffe1382a86a68f5144ee7bc3a0b7694
+spring.security.oauth2.client.registration.facebook.client-id=${FACEBOOK_CLIENT_ID}414272186414011
+spring.security.oauth2.client.registration.facebook.client-secret=${FACEBOOK_CLIENT_SECRET}
+
 spring.security.oauth2.client.registration.facebook.scope=email,public_profile
 spring.security.oauth2.client.provider.facebook.authorizationUri=https://www.facebook.com/v3.0/dialog/oauth
 spring.security.oauth2.client.provider.facebook.tokenUri=https://graph.facebook.com/v3.0/oauth/access_token
 spring.security.oauth2.client.provider.facebook.userInfoUri=https://graph.facebook.com/v3.0/me?fields=id,first_name,middle_name,last_name,name,email,verified,is_verified,picture.width(250).height(250)
 
-spring.h2.console.enabled=true
-
 spring.jpa.hibernate.ddl-auto=validate
-spring.datasource.url=jdbc:mysql://localhost:3306/todo?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=D#sk8mNIX7*
+spring.datasource.url=jdbc:mysql://${RDS_HOSTNAME}:${RDS_PORT}/${RDS_DB_NAME}
+spring.datasource.username=${RDS_USERNAME}
+spring.datasource.password=${RDS_PASSWORD}
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.show-sql=true
 
 spring.mvc.hiddenmethod.filter.enabled=true
 spring.liquibase.change-log=classpath:/database/liquibase-changeLog.xml
